--- a/index.html
+++ b/index.html
@@ -152,14 +152,14 @@
                 </div>
                <!--List Contributor's Names and attributions-->
                 <div class="row justify-content-center">
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
+                    <div class="col-sm"><p>Contact Bridget Hafner for more infomation on invasive species impact on wildlife, health and safety, and the economy x</p></div>
+                    <div class="col-sm"><p>Contact Ben Reed for more infomation on Prevalent Invasive Species and Argument x</p></div>
+                    <div class="col-sm"><p>Contact Kaitlyn Lint for more infomation on Calls to Action x</p></div>
+                    <div class="col-sm"><p>Contact Long Nguyen for more infomation on Preventative measures for CLimate Change x</p></div>
+                    <div class="col-sm"><p>Contact Cameron Garber for more infomation on Preventative Energy Measures x</p></div>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
+                    <div class="col-sm"><p>Contact James Kwon for more infomation on How to Help x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
                     <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
