--- a/index.html
+++ b/index.html
@@ -152,18 +152,18 @@
                 </div>
                <!--List Contributor's Names and attributions-->
                 <div class="row justify-content-center">
-                    <div class="col-sm"><p>Contact Bridget Hafner for more infomation on Our argument and Invasive Species impact on wildlife, health and safety, and the Economy x</p></div>
-                    <div class="col-sm"><p>Contact Kaitlyn Lint for more infomation on Calls to Action x</p></div>
-                    <div class="col-sm"><p>Contact Ben Reed for more infomation on Prevalent Invasive Species and Project Layout x</p></div>
-                    <div class="col-sm"><p>Contact Long Nguyen for more infomation on Preventative measures for Climate Change x</p></div>
-                    <div class="col-sm"><p>Contact Cameron Garber for more infomation on Preventative energy measure x</p></div>
+                    <div class="col-sm"><p> </p></div>
+                    <div class="col-sm"><p>Contact Bridget Hafner for more information on Our argument and Invasive species impact on Wildlife, Health and Safety, and the Economy </p></div>
+                    <div class="col-sm"><p>Contact Ben Reed for more infomation on Prevalent Invasive Species and Project Layout </p></div>
+                    <div class="col-sm"><p>Contact Long Nguyen for more infomation on Preventative measures for Climate Change </p></div>
+                    <div class="col-sm"><p></p></div>
                 </div>
                 <div class="row justify-content-center">
-                    <div class="col-sm"><p>Contact James Kwon for more infomation on How to Help x</p></div>
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
-                    <div class="col-sm"><p>Contact first name and last name for more infomation on x</p></div>
+                    <div class="col-sm"><p></p></div>
+                    <div class="col-sm"><p>Contact Cameron Garber for more infomation on Preventative energy measure</p></div>
+                    <div class="col-sm"><p>Contact James Kwon for more infomation on How to Help</p></div>
+                    <div class="col-sm"><p>Contact Kaitlyn Lint for more information on Calls to Action</p></div>
+                    <div class="col-sm"><p></p></div>
                 </div>
             </div>
         </section>
