--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <!-- Masthead Avatar Image-->
                 <img class="masthead-avatar mb-5" src="assets/img/portfolio/ISSfront (1).png" alt="..." />
                 <!-- Masthead Heading-->
-                <h1 class="masthead-heading text-uppercase mb-0">Title of Our Project</h1>
+                <h1 class="masthead-heading text-uppercase mb-0">Climate Change: Invasive Species Impact on our Ecosystems</h1>
                 <!-- Icon Divider-->
                 <div class="divider-custom divider-light">
                     <div class="divider-custom-line"></div>
@@ -48,7 +48,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- Masthead Subheading-->
-                <p class="masthead-subheading font-weight-light mb-0">And Why It Matters</p>
+                <p class="masthead-subheading font-weight-light mb-0">Invasive species have always been an issue to any ecosystem. As climate change has become a larger concern, its impact on invasive species has increased, causing greater irregular hunting and migrating patterns. In order to protect our ecosystems, we as a society need to prioritize taking progressive action towards preventing climate change.</p>
             </div>
         </header>
         <!-- Portfolio Section-->
@@ -133,7 +133,7 @@
                     <div class="divider-custom-line"></div>
                 </div>
                 <!-- About Section Content-->
-                <div class="container"><p>This is where you will gather together your evidence. Why should we care about this issue? It is a good idea to start with an anecdote and this section will be graded on investment and enthusiasm. Remember, people are moved by opinions and passion. You may want to incorporate a story that will influence people to care. You can add images and videos that speak to this anecdote, either in the portfolio section, where you should have a mix of mediums, including images, videos, evidence, and calls to action, or you can add one powerful image or video here by copying and pasting the code into this divider (I recommend the former so that it is not too busy). Once you have captured your audience's attention and got them invested, introduce your main argument and scholars. This section should include the "so-what?" of your argument. This container will expand as needed but still strive for concision.</p>
+                <div class="container"><p>Intruder! Intruder! It's scary to think about someone breaking into your home, taking away your possessions, damaging your belongings, and harming your people. Wouldn't you want to find every way to prevent this? Well this is an issue now for wildlife in our ecosystems, and we can better protect our Native wilflife by taking preventative action against climate change. Invasive species are damaging for many reasons.Invasive species are among the leading threats to native wildlife. Approximately 42% or endangered or threatened species are at risk, due to invasive species. On top of that, invasive species destroy biodiversity of an ecosystem. In the portfolios above, you can see that Invasive species not only have a negative impact on our environment, but our economy, and the health and safety of our society. Invasive species have been a prevalent issue for some time now, but more recently they have become a nuisance to society as they begin to stray away fromt their normal migrating and hunting patterns as climate change affects their day to day life.If we want to protect our native wildlife, we need to begin following the preventative measures neccessary to prevent climate chnaeg from worsening. Don't you want to prevent an intrusion on your ecosystems?</p>
                 </div>
                 </div>
                 <!-- About Section Button-->
