--- a/index.html
+++ b/index.html
@@ -368,7 +368,17 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/small fam.jpg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">This is where you will say something about the image. Try to have these six containers provide a mix of calls to action and literature to support your cause. For instance, if you can find a local organization to call/volunteer/donate/etc., you may want to put their information in one of these containers. Likewise, your image may be a phone. The title of this image may be their organization. In the space where this is all typed, you will talk about them. If they are an organization, you may include their mission statement or their spokesperson or representative image. If it is literature, be sure to include significant evidence here. You may want to pull a quote (if you do, include in-text citation) and you may want to pull a photo of scholar/speaker from the internet. Make sure it is covered under your license, especially if you have made your website public.</p>
+                                    <p class="mb-4">You
+~ It starts with one person at a time. You would think that out of 7 billion people one could never make a difference, but that’s not true. For example, if the average person restricted themselves to only 2,000 watts of power each year it would make a huge difference. The average American uses around 12,000 watts, so just imagine how much power could be saved and how little we would be polluting the Earth with such a minor change.
+Controlled businesses 
+~ It would be very beneficial if companies could move toward cleaner energy without sending power plants into retirement. An example of this could be a switch to nuclear power that would boost efficiency and decrease fossil fuel emissions.
+Manage Cities 
+~ By the year 2050, cities will contain two-thirds of the people on this planet. Therefore, urban areas account for 76% of CO2 emissions, which is very bad for our environment. Even though the populations are high in these areas, it gives them a chance to fix it before it’s too late. That can be done by improving the aging infrastructure, reducing the pollution, and making the cities more attractive for the residents/businesses. 
+Nations
+~ The International Panel on Climate Change warned the public about irreversible impacts unless greenhouse gasses are contained, and fast. They however are the ones in control. The nations can create policies, toughen or weaken standards, and take action. The fate of our climate lies in their hands to gain control of this issue and do something about it.
+Geoengineering
+~ This is a term that basically means creating large scale interventions in the environment to counteract climate change. There is a lot of research that is still needed in order to make this work. However, trying to cool down our Earth that is overheating if you will is more complicated than it might seem. Currently people are looking into more efficient energy sources such as nuclear power to combat the carbon dioxide emissions. A more simple version could start with the removal of carbon dioxide. Creating artificial trees with filters might not be a bad idea.
+</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
