--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">"No Planet B"</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Human Health and Safety</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
@@ -336,7 +336,16 @@
                                     <!-- Portfolio Modal - Image-->
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/big cloud.jpg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">This is where you will say something about the image. Try to have these six containers provide a mix of calls to action and literature to support your cause. For instance, if you can find a local organization to call/volunteer/donate/etc., you may want to put their information in one of these containers. Likewise, your image may be a phone. The title of this image may be their organization. In the space where this is all typed, you will talk about them. If they are an organization, you may include their mission statement or their spokesperson or representative image. If it is literature, be sure to include significant evidence here. You may want to pull a quote (if you do, include in-text citation) and you may want to pull a photo of scholar/speaker from the internet. Make sure it is covered under your license, especially if you have made your website public..</p>
+                                    <p class="mb-4">New diseases have made quite the name for themselves throughout human history. Their introduction has always been nothing short of catastrophic. Non-native, invasive species have been responsible for outbreaks, including: rats, mosquitos, and mussels. Disease transmission that has been directly responsible due to invasive species has resulted in numerous deaths and irreversible damage.
+
+	All we can do now is encourage taking action towards preventing these Invasive species from ever entering their non-native ecosystems. By preventing climate change, we slow the rate, and discourage these species' migrating patterns from altering. We also lessen our impact on their environmental hunting patterns. 
+
+
+HOW DO WE HELP:
+Introduction of Green energy would greatly benefit the environment and animals inhabiting it. Green energy refers to renewable energy sources that have a minimal impact on the environment and reduce carbon emissions. These sources of energy are sustainable and do not rely on finite resources like fossil fuels, which are not only expensive but also contribute significantly to climate change.
+
+Some examples of green energy sources include solar power, wind power, hydropower, geothermal energy, and biomass energy. These sources of energy are often harnessed through the use of advanced technologies such as solar panels, wind turbines, hydroelectric dams, and more.
+</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
