--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                                     <!-- Portfolio Modal - Image-->
                                         <a class="btn btn-primary btn-lg" href="assets/documents/448550a.pdf" target="_blank" alt="...">Click here to open this PDF in a new window</a><!-- Alternatively, you can replace what the button says with the name of the article or whatever you want-->
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4"><br>You can also add a PDF the same way you add an image.  Just write where to find the PDF that you have uploaded and like the video and images, replace this text with what is significant about this reading. Target blank allows the PDF to open in a new window.</p>
+                                    <p class="mb-4"><br>This article helps us to expand our current knowledge of climate change by diving deeper into the subsurface levels of climate change effects on our planet and everyday life. Wilfried Thuiller not only covers the negative effects of an increase of invasive species, but also taps into how several changes are all linked together and are related. Changes such as decreasing ozone, increasing land usage, freshwater decline, and more.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
