--- a/index.html
+++ b/index.html
@@ -207,7 +207,8 @@
                                     <!-- Portfolio Modal - Video-->
                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/spTWwqVP_2s" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">You can also embed Youtube videos by clicking share on a youtube video, copy and past the iframe and insert it as I have above. In place of this tutorial, talk about what is significant about this video. You should also include any necessary content warnings which may include graphic detail, violence, strobe lights, etc. </p>
+                                    <p class="mb-4">This video does a fantastic job covering just how destructive invasive species can be. It also displays background knowledge on invasive species such as what factors cause them to invade as well as the roles that humans play. Overall, we believe that the biggest takeaway from this video is the sensitivity of our ecosystems and the fact that we do not have a “Planet B.”
+</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
