--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
             </div>
         </div>
         <!-- Portfolio Modal 2-->
-        <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" aria-labelledby="portfolioModal2" aria-hidden="true">
+        <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" aria-labelledby="portfolioModal3" aria-hidden="true">
             <div class="modal-dialog modal-xl">
                 <div class="modal-content">
                     <div class="modal-header border-0"><button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button></div>
@@ -230,17 +230,17 @@
                             <div class="row justify-content-center">
                                 <div class="col-lg-8">
                                     <!-- Portfolio Modal - Title-->
-                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">The Threat of Invasive Species</h2>
+                                    <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">Climate Change and the Ecologist</h2>
                                     <!-- Icon Divider-->
                                     <div class="divider-custom">
                                         <div class="divider-custom-line"></div>
                                         <div class="divider-custom-icon"><i class="fas fa-star"></i></div>
                                         <div class="divider-custom-line"></div>
                                     </div>
-                                    <!-- Portfolio Modal - Video-->
-                                    <iframe width="560" height="315" src="https://www.youtube.com/embed/-C_onGQhiqE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                                    <!-- Portfolio Modal - Image-->
+                                        <a class="btn btn-primary btn-lg" href="assets/documents/448550a.pdf" target="_blank" alt="...">Click here to open this PDF in a new window</a><!-- Alternatively, you can replace what the button says with the name of the article or whatever you want-->
                                     <!-- Portfolio Modal - Text-->
-                                    <p class="mb-4">This Video shares how Invasive species affect our Ecosystems and the different situations they create in Nature. </p>
+                                    <p class="mb-4"><br>This article helps us to expand our current knowledge of climate change by diving deeper into the subsurface levels of climate change effects on our planet and everyday life. Wilfried Thuiller not only covers the negative effects of an increase of invasive species, but also taps into how several changes are all linked together and are related. Changes such as decreasing ozone, increasing land usage, freshwater decline, and more.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
