--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html lang="en">
     <head>
         <meta charset="utf-8" />
@@ -305,8 +305,7 @@
                                     <img class="img-fluid rounded mb-5" src="assets/img/portfolio/the duk lol.jpg" alt="..." />
                                     <!-- Portfolio Modal - Text-->
                                     <p class="mb-4">WILDLIFE:
-	Invasive species are among the leading threats to native wildlife and approximately 42% or endangered or threatened species are at risk, due to invasive species. The decline and extinction of native species due to invasive predators can have impacts that cascade throughout entire ecosystems. When it comes to invasive animals, there are many aspects that contribute to why they are so concerning. They not only compete with native animals for food and habitats, they sometimes prey on them as well. Climate change can give invasive species an advantage depending on what food and climate they are best inclined to live in. So they can be better at hunting and gathering than native species and they end up leading native species to a disadvantage. Another aspect of invasive animals is the parasites and diseases that they carry that can spread to humans, plants, or other wildlife.
-					https://www.fairfaxcounty.gov/publicworks/invasive-species/why-it-matters#:~:text=Invasive%20species%20can%20lead%20to,and%20animal%20health%20and%20safety.</p>
+	Invasive species are among the leading threats to native wildlife and approximately 42% or endangered or threatened species are at risk, due to invasive species. The decline and extinction of native species due to invasive predators can have impacts that cascade throughout entire ecosystems. When it comes to invasive animals, there are many aspects that contribute to why they are so concerning. They not only compete with native animals for food and habitats, they sometimes prey on them as well. Climate change can give invasive species an advantage depending on what food and climate they are best inclined to live in. So they can be better at hunting and gathering than native species and they end up leading native species to a disadvantage. Another aspect of invasive animals is the parasites and diseases that they carry that can spread to humans, plants, or other wildlife.</p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
                                         Close Window
@@ -388,7 +387,7 @@ Manage Cities
 Nations
 ~ The International Panel on Climate Change warned the public about irreversible impacts unless greenhouse gasses are contained, and fast. They however are the ones in control. The nations can create policies, toughen or weaken standards, and take action. The fate of our climate lies in their hands to gain control of this issue and do something about it.
 Geoengineering
-~ This is a term that basically means creating large scale interventions in the environment to counteract climate change. There is a lot of research that is still needed in order to make this work. However, trying to cool down our Earth that is overheating if you will is more complicated than it might seem. Currently people are looking into more efficient energy sources such as nuclear power to combat the carbon dioxide emissions. A more simple version could start with the removal of carbon dioxide. Creating artificial trees with filters might not be a bad idea.
+~ This is a term that basically means creating large scale interventions in the environment to counteract climate change. There is a lot of research that is still needed in order to make this work. However, trying to cool down our Earth that is overheating if you will is more complicated than it might seem. Currently people are looking into more efficient energy sources such as nuclear power to combat the carbon dioxide emissions. A more simple version could start with the removal of carbon dioxide. Creating artificial trees with filters might not be a bad idea.https://www.nationalgrid.com/stories/energy-explained/what-is-green-energy
 </p>
                                     <button class="btn btn-primary" data-bs-dismiss="modal">
                                         <i class="fas fa-xmark fa-fw"></i>
